syntax = "proto3";

package blog;


option go_package = "blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequets{
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; // will have a blog id
}

message ReadBlogRequets{
    string blog_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1; 
}

service BlogService {
   rpc CreateBlog (CreateBlogRequets) returns (CreateBlogResponse);
   rpc ReadBlog (ReadBlogRequets) returns (ReadBlogResponse); // return NOT_FOUND if not found
}